--- a/EVST Dashboard/package.json
+++ b/EVST Dashboard/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "4.6.2",
     "chart.js": "3.9.1",
     "classnames": "2.3.2",
@@ -12,9 +14,15 @@
     "react": ">=16.8.0",
     "react-chartjs-2": "3.3.0",
     "react-dom": ">=16.8.0",
+    "react-ga": "^3.3.1",
+    "react-icons": "^4.11.0",
     "react-notification-alert": "0.0.13",
+    "react-redux": "^8.1.3",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
+    "react-zoom-pan-pinch": "^3.3.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "1.62.1"
   },
   "scripts": {
