--- a/EVST Dashboard/package.json
+++ b/EVST Dashboard/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://AryanDubey2389.github.io/Madagascar-Dashboard",
   "name": "black-dashboard-react",
   "version": "1.2.2",
   "private": true,
@@ -9,6 +10,7 @@
     "bootstrap": "4.6.2",
     "chart.js": "3.9.1",
     "classnames": "2.3.2",
+    "gh-pages": "^6.0.0",
     "perfect-scrollbar": "1.5.5",
     "prop-types": "15.8.1",
     "react": ">=16.8.0",
@@ -26,8 +28,10 @@
     "sass": "1.62.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
