--- a/EVST Dashboard/package.json
+++ b/EVST Dashboard/package.json
@@ -18,6 +18,7 @@
     "react-dom": ">=16.8.0",
     "react-ga": "^3.3.1",
     "react-icons": "^4.11.0",
+    "react-image-magnify": "^2.7.4",
     "react-notification-alert": "0.0.13",
     "react-redux": "^8.1.3",
     "react-router-dom": "6.11.1",
